...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_results" />

    <TextView
        android:id="@+id/no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:textColor="@color/text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/no_results_icon"
...
