<resources>
    <string name="what_are_you_thankful_for">What are you grateful for?</string>
    <string name="what_were_you_thankful_for">What were you grateful for?</string>
    <string name="what_are_you_thankful_for_today">What are you grateful for today?</string>
    <string name="what_are_you_thankful_for_yesterday">What were you grateful for yesterday?</string>
    <string name="notification_settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_presently">Share Presently</string>
    <string name="enjoying_presently">Enjoying Presently? Share the app with your friends and family</string>
    <string name="read_privacy">Read Presently\'s privacy policy</string>
    <string name="faq">FAQ</string>
    <string name="read_faq">Read Presently\'s frequently asked questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="read_tc">Read our terms &amp; conditions</string>
    <string name="channel_name">Presently Reminder</string>
    <string name="channel_description">Daily reminders to note what you\'re grateful for</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="iwas">I was grateful for</string>
    <string name="iam">I am grateful for</string>
    <string name="save">Save</string>
    <string name="back_up_entries_to_csv">Backup entries</string>
    <string name="export_success">Data exported to your device</string>
    <string name="open">Open</string>
    <string name="import_entries_from_backup">Import entries from backup</string>
    <string name="ok">Import</string>
    <string name="cancel">Cancel</string>
    <string name="random">Random</string>
    <string name="import_data_dialog">Are you sure you want to import?</string>
    <string name="import_data_dialog_message">Imported data could overwrite existing entries.</string>
    <string name="days_of_gratitude">days of gratitude!</string>
    <string name="days_of">days of gratitude</string>
    <string name="rate_presently">Rate Presently</string>
    <string name="share_your_achievement">Share your achievement</string>
    <string name="congrats_milestone">
        Congratulations! We\'re so proud of you and so grateful you chose Presently to record your gratitude.
    </string>
    <string name="search">Search</string>
    <string name="presently" translatable="false">Presently</string>
    <string name="close">Close</string>
    <string name="get_a_new_prompt">Get a prompt</string>
    <string name="share_your_gratitude">Share your gratitude</string>
    <string name="no_results">No results</string>
    <string name="settings">Settings</string>
    <string name="reminder_title">Presently Gratitude Reminder</string>
    <string name="share_progress">Share your gratitude progress</string>
    <string name="change_time">Change your daily reminder time</string>
    <string name="time_title">Adjust Reminder Notifications</string>
    <string name="theme_change">Choose from over 30 different themes and color schemes</string>
    <string name="notifs_off">Daily reminder notifications are off</string>
    <string name="notifs_on">Daily reminder notifications are on</string>
    <string name="notifs">Daily Reminder Notifications</string>
    <string name="notifs_name">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="about">App Information</string>
    <string name="select_a_theme">Select a theme</string>
    <string name="theme">Theme</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="open_source_info">Read open source library licenses</string>
    <string name="permission_export">Permission is needed to export data</string>
    <string name="error_parsing">Error parsing file</string>
    <string name="file_not_csv">File must be a CSV</string>
    <string name="error_creating_csv_file">Error creating CSV file on device</string>
    <string name="no_app_found">No app found to open this file</string>
    <string name="copied">Copied to clipboard</string>
    <string name="security">Security</string>
    <string name="lock_title">Unlock Presently</string>
    <string name="lock_summary">Presently is locked, unlock to continue</string>
    <string name="lock_setting_summary_on">Presently will lock with your device\'s biometric scanner.</string>
    <string name="lock_setting_summary_off">Presently can lock with your device\'s biometric scanner (if supported by device).</string>
    <string name="fingerprint_error_lockout_too_many">Too many biometric authentication attempts. Please try again in a few minutes.</string>
    <string name="fingerprint_error_biometric_not_setup">Please set up biometric recognition.</string>
    <string name="fingerprint_error_biometric_code">Authentication error code: %1$d </string>
    <string name="continue_to_exit">Continue</string>
    <string name="are_you_sure">Are you sure you want to go back?</string>
    <string name="unsaved_text">Your entry is unsaved and your changes will be lost!</string>
    <string name="version_number">Version Number</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="every">On every change</string>
    <string name="dropbox_summary_off">Log in with your Dropbox account to automatically back up your entries</string>
    <string name="dropbox_summary_on">Your entries are being backed up to Dropbox</string>
    <string name="dropbox_setting_title">Back up your data with Dropbox</string>
    <string name="dropbox_backup_frequency">Dropbox Backup Frequency</string>
    <string name="one_time_export_summary">Manually export your entries to CSV format to your device</string>
    <string name="one_time_export">Export entries to CSV</string>
    <string name="import_summary">Select a backed up CSV file to import</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="day_of_week_off">Date does not include day of the week</string>
    <string name="day_of_week_on">Date includes day of the week</string>
    <string name="day_of_week_title">Date Style</string>
    <string name="max_lines_title">Timeline Entry Length</string>
    <string name="max_lines_summary">Number of lines shown in the timeline. The full text is visible when you click the entry.</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="day_of_week_summary">Set the first day of the week in the calendar view</string>
    <string name="first_day_of_week_title">First day of the week</string>
    <string name="share_milestone">I completed %1$d days of gratitude journaling! Join me using the Presently App. #PresentlyApp</string>
    <string name="share_app_text">Practice gratitude with this simple, always free, and private gratitude journaling app</string>
    <string name="app_language_title">Application language</string>
    <string name="app_language_summary">Set default app language</string>
    <string name="loading_lang">Loading language, please wait</string>
    <string name="show_quote_off">Gratitude quotes will not be shown on entry page</string>
    <string name="show_quote_on">Gratitude quotes will be shown on entry page</string>
    <string name="inspiration_title">Inspirational quotes</string>
    <string name="alarm_disabled_title">Notifications have been disabled at the system level</string>
    <string name="alarm_disabled_body">Click here to enable in system settings</string>
    <string name="analytics_opt_out_title">Analytics data collection</string>
    <string name="analytics_opted_in_desc">Presently is collecting anonymized, encrypted analytics information to help diagnose problems and monitor trends</string>
    <string name="analytics_opted_out_desc">Presently is not collecting any analytics information</string>
    <string name="analytics_opt_out_success">Analytics data is deleted and no longer recorded!</string>
    <string name="analytics_opt_in_success">Analytics data is being recorded again!</string>
    <string name="backup_channel_name">Presently Automatic Backup Issues</string>
    <string name="backup_channel_description">Notifications for issues with automatic backup</string>
    <string name="backup_failure_notif_header">Presently Automatic Backup Failure</string>
    <string name="dropbox_too_full_notif_body">Presently failed to backup your data because your Dropbox is full. Tap to view your Dropbox account.</string>
    <string name="dropbox_sync_error_notif_body">There was a problem with your Dropbox account, click here to reconnect to Dropbox to resume automatic backups.</string>
    <string name="learn_more">Learn more</string>
    <string name="menu">Menu</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="import_success">Imported successfully!</string>
</resources>
