...
                style = PresentlyTheme.typography.titleLarge,
                color = PresentlyTheme.colors.entryDate
            )
            TextField(
                modifier = Modifier
                    .focusRequester(focusRequester)
                    .testTag("editViewTextField"),
                value = content,
                onValueChange = {
                    onTextChanged(it)
                },
                placeholder = {
                    Text(
...
